//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.sv.msg;

option java_package = "com.sandpolis.core.sv.msg";
option optimize_for = CODE_SIZE;

/**
 * Request a login from the server.
 */
message RQ_Login {

    // The login username
    string username = 1;

    // The password
    string password = 2;

    // Time-based One-Time Password token
    int32 totp = 3;
}

/**
 * Request that the current user be logged out.
 */
message RQ_Logout {
}
